--- a/INDEX.html
+++ b/INDEX.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript" src="js/scripts.js">
-
-    </script>
     <meta charset="utf-8">
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+     <link rel="stylesheet" href="css/styles.css">
+     <script
+       src="https://code.jquery.com/jquery-3.3.1.js"
+       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+       crossorigin="anonymous"></script>
+     <script src="js/scripts.js" type="text/javascript">
+     </script>
     <title>Pig Dice</title>
   </head>
 <body>
   <div class="container">
-    <button onclick="diceRoll()">Roll the Dice</button>
+    <button id="buttonRoll" type="submit" class="btn btn-success">Roll the Dice</button>
   </div>
 </body>
 </html>
